# vic3_calc

./: Cargo.toml  Makefile.toml  todo.md
data/: buildings.toml  buildings.yaml  resources.toml  resources.yaml
src/: lib.rs  main.rs  vic.rs
