[package]
name = "vic3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beaver = "1.0.0"
clap = { version = "4.0.19", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
