[package]
name = "vic3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
color-eyre = "0.6.2"
fake = { version = "2.5.0", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
